# ferrpdf

./: .gitignore  .typos.toml  Cargo.toml  LICENSE  README.md  TASK_QUEUE_REFACTORING.md
.cargo/: config.toml
convert/: README.md  convert.py  inference.py  requirements.txt
core/: Cargo.toml
core/src/: lib.rs
core/src/analysis/: bbox.rs  inference.rs  labels.rs  mod.rs
core/src/inference/: session.rs
core/src/layout/: element.rs  parser.rs
ferrpdf-core/: Cargo.toml  build.rs
ferrpdf-core/src/: consts.rs  error.rs  lib.rs  parser.rs
ferrpdf-core/src/analysis/: bbox.rs  labels.rs  mod.rs
ferrpdf-core/src/inference/: mod.rs  model.rs  session.rs
ferrpdf-core/src/inference/paddle/: mod.rs  model.rs  session.rs
ferrpdf-core/src/inference/paddle/detect/: model.rs  session.rs
ferrpdf-core/src/inference/paddle/recognize/: model.rs  session.rs
ferrpdf-core/src/inference/yolov12/: mod.rs  model.rs  session.rs
ferrpdf-core/src/layout/: element.rs  mod.rs  page.rs
ferrpdf-core/src/parse/: mod.rs  parser.rs  task_based_parser.rs  task_queue.rs  task_queue_parser.rs  tasks.rs
ferrpdf-core/src/parser/: layout.rs  mod.rs  render.rs
models/: README.md  download.py  requirements.txt
pdf-render/: Cargo.toml  build.rs
