[workspace]
members = ["core", "pdf-render"]
resolver = "2"

[workspace.dependencies]
anyhow = "1.0.95"
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "json",
    "registry",
] }

[profile.release]
strip = "symbols"
opt-level = 3

[profile.dist]
inherits = "release"
lto = "thin"
