[workspace]
resolver = "2"
members = ["ferrpdf-core"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tracing = { version = "0.1.41", features = ["attributes"] }
tracing-subscriber = { version = "0.3.19", features = [
  "env-filter",
  "fmt",
  "json",
  "registry",
] }

[profile.release]
opt-level = 3
debug = false
strip = "symbols"
lto = true
incremental = false
codegen-units = 1
