[package]
name = "core"
version = "0.1.0"
edition = "2024"

[dependencies]
glam = "0.30.4"
image = "0.25.6"
ndarray = "0.16.1"
ort = { version= "=2.0.0-rc.10" }
raqote = "0.8.5"
show-image = { version = "0.14.1", features = ["image", "raqote"] }
tracing = {workspace=true}
tracing-subscriber = { workspace = true }

[[bin]]
name = "onnx"
path = "src/bin/onnx.rs"
