[package]
name = "core"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "onnx"
path = "src/bin/onnx.rs"

[dependencies]
glam = "0.30.4"
image = "0.25.6"
imageproc = "0.25.0"
ndarray = "0.16.1"
ort = { version = "=2.0.0-rc.10" }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
