[package]
name = "pdf-render"
version = "0.1.0"
edition = "2024"

[dependencies]
image = "0.25.6"
pdfium-render = { version = "=0.8.27", features = ["bindings", "sync"] }
rayon = "1.10.0"

tokio = { workspace = true }

[build-dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
flate2 = "1.0"
tar = "0.4"

[[bin]]
name = "pdf-render"
path = "src/bin/render.rs"
