[package]
name = "pdf-render"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "pdf-render"
path = "src/bin/render.rs"

[dependencies]
image = "0.25.6"
pdfium-render = { version = "=0.8.27", features = ["bindings", "sync"] }
rayon = "1.10.0"
tokio = { workspace = true }

[build-dependencies]
flate2 = "1.0"
reqwest = { version = "0.11", features = ["blocking", "json"] }
tar = "0.4"
